Fix buttons spacing

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
 
 .btn {
   padding: 0.5em 1.5em;
-  margin: 1em 0.05em;
+  margin: 1em 0.2em;
   border: none;
   border-radius: 5px;
   outline: none;
